# zalo-extension

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.postgres.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  normalization.py  outbox.py  schemas.py  worker.py
backend/app/services/: google_oauth.py  runtime.py  sheets.py  zalo.py  zalo_bridge.py
backend/auto_zalo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: e2e_local.py
backend/tests/: test_api.py  test_normalization.py  test_sheets.py  test_worker.py  test_zalo.py
extension/: manifest.json  package-lock.json  package.json  tsconfig.json
extension/scripts/: build.mjs
extension/src/: contact.ts  content.ts  options.html  options.ts  parser.ts  service-worker.ts  types.ts
extension/tests/: contact.test.ts  parser.test.ts
zalo-bridge/: Dockerfile  package-lock.json  package.json  server.mjs  server.test.mjs
