[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-zalo-backend"
version = "0.1.0"
description = "TikTok Shop capture, Google Sheets sync and Zalo outbox service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "sqlalchemy>=2.0.41,<3",
  "pydantic-settings>=2.10,<3",
  "httpx>=0.28,<1",
  "google-api-python-client>=2.176,<3",
  "google-auth>=2.40,<3",
  "google-auth-oauthlib>=1.2,<2",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
